--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,9 @@ include_directories(
 
 add_library(dmosal SHARED ${osal_SRC})
 
+add_executable(osal_task "example/task_example.c")
+target_link_libraries(osal_task dmosal ${CMAKE_THREAD_LIBS_INIT})
+
 enable_testing()
 set(CMAKE_CTEST_COMMAND stdbuf -o0 ctest -V)
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
