--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,19 +33,29 @@ add_library(dmosal SHARED ${osal_SRC})
 set_target_properties(dmosal PROPERTIES VERSION
   ${DMOSAL_VERSION} SOVERSION ${DMOSAL_MAJOR_VERSION})
 
-set(INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/include/dmosal")
+set(DMOSAL_INCLUDE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/include/dmosal")
 
-file(GLOB_RECURSE dmosal_INCLUDE RELATIVE ${INCLUDE_PATH} "include/dmosal/*.h")
+file(GLOB_RECURSE dmosal_INCLUDE RELATIVE ${DMOSAL_INCLUDE_PATH} "include/dmosal/*.h")
 list(SORT dmosal_INCLUDE)
 
+execute_process(COMMAND
+  git rev-parse --short HEAD
+  OUTPUT_VARIABLE
+  DMOSAL_GIT_COMMIT
+  OUTPUT_STRIP_TRAILING_WHITESPACE
+)
+string(TIMESTAMP DMOSAL_BUILD_TIME "%Y:%m:%d-%H:%M")
+
 foreach(file ${dmosal_INCLUDE})
-    get_filename_component( dir ${file} DIRECTORY )
-    install( FILES "${INCLUDE_PATH}/${file}"
-	  DESTINATION "${INSTALL_INCLUDE_DIR}/dmosal/${dir}" COMPONENT dev)
+  get_filename_component( dir ${file} DIRECTORY)
+  install(FILES "${DMOSAL_INCLUDE_PATH}/${file}"
+	DESTINATION "${INSTALL_INCLUDE_DIR}/dmosal/${dir}" COMPONENT dev)
 endforeach()
 
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/include/dmosal/osal_limit.h.in"
-  "${CMAKE_CURRENT_SOURCE_DIR}/include/dmosal/osal_limit.h" @ONLY)
+configure_file("${DMOSAL_INCLUDE_PATH}/osal_limit.h.in"
+  "${DMOSAL_INCLUDE_PATH}/osal_limit.h" @ONLY)
+configure_file("${DMOSAL_INCLUDE_PATH}/osal_version.h.in"
+  "${DMOSAL_INCLUDE_PATH}/osal_version.h" @ONLY)
 configure_file(dmosal.pc.in ${PROJECT_BINARY_DIR}/dmosal.pc @ONLY)
 
 install(FILES ${PROJECT_BINARY_DIR}/dmosal.pc
